2008-10-10 fabien
bring some corrections after the Mme Ba review :
* remove Mandate form from the allowed form list because it's not implemented yet
* improve EGov_goToDocument script
* update WebSite_login page template to redirect form user on view if the state of the document is draft (to be able to continue the subscription)
* modify checkAccountInexistance workflow script to use ninea number instead of rccm one to check that the company don't exists
* modify "Save draft and continue later" button behavior. Now when you click on, data are saved and a page is displayed with your credentials (if it's an anonymous application)
* add EGov_Base_editAndRedirect script that save the data of the current form and redirect to

2008-09-25 fabien
* modify some selection_name on listbox to be unique and avoid conflic

2008-09-23 fabien
* remove standardSecurity extension. The name was in conflict with an Extension in erp5_core. Move it in safi_egov bt and rename it in ERP5EGov_Security.

2008-09-12 fabien
* Change all indentation, thanks to julien patch
* move annonymous_workflow from egov public bt to safi_egov private bt wich is a more appropriate place.

2008-09-11 fabien
* Make anonymous subscription safer using a login and password to check the application progress.

2008-09-09 fabien
* report_section refactoring to be more generic and easier to customize with more pdf

2008-08-26 fabien
* add erp5_captcha skin folder
* add portal_sessions tool

2008-06-10 fabien
* add erp5_egov_catalog to dependence list

2008-06-07 fabien
* move all web page and web site to safi_egov bt

2008-06-04 fabien
* enhance EGov_Base_editAndNextStep script, now it should be possible to not
have a modified Base_edit script
* moved here some script from safi_tva bt

2008-05-26 fabien
bt refactoring :
* change portal_types names
* add functionality (captcha, contextual help,...)
* enhance security, ...

2008-03-11 fabien
* hide Preference button on the workspace for annonymous users